audela/src/include/absimple.h

   //=============================================================================
   /// example #1 :add two numbers 
   extern "C" ABSIMPLE_API int  absimple_processAdd(int a, int b);
 

   /// example #1 : substract two numbers  
   extern "C" ABSIMPLE_API int  absimple_processSub(int a, int b);
 

  

   /// callback error type. User program must implement a function with to capture exception. 
   typedef void (* ErrorCallbackType)(int code, const char * message);
   /// release returned string created by absimple functions
   extern "C" ABSIMPLE_API void absimple_releaseCharArray(const char * charArray);
   // 2) ICalculator "C" functions declaration for other langages than C++
   /// Example #2 : create ICalculator instance. Returned ICalculator must be releases with ICalculator_deleteInstance()
   extern "C" ABSIMPLE_API ICalculator*  ICalculator_createInstance(ErrorCallbackType applicationCallback);
   /// Example #2 : add a to current value
   extern "C" ABSIMPLE_API double    ICalculator_add(ICalculator*, double a);
 
   /// Example #2 : substract a from current value
   extern "C" ABSIMPLE_API double    ICalculator_sub(ICalculator*, double a);
 
   /// Example #2 : divide current value by a . Returns IError#ErrorCode IError#ErrorCode.DivideByZero exception if a is null.
   extern "C" ABSIMPLE_API double    ICalculator_divide(ICalculator*, double a);
 
   /// Example #2 : set current value 
   extern "C" ABSIMPLE_API double    ICalculator_set(ICalculator*, double a);
 
   /// Example #2 : clear current value ( set 0 )
   extern "C" ABSIMPLE_API double    ICalculator_clear(ICalculator*);
 

   //=============================================================================
   /// example #3 : struct DateTime interface 
   struct IDateTime { 
      int year;      ///< year (must be >= 1900) 
      int month;     ///< month of year from 1 to 12
      int day;       ///< day of month from 1 to 31
      int hour;      ///< hours of day from 0 to 24
      int minute;    ///< minutes of hour from 0 to 59
      int second;    ///< seconds of minutes from 0 to 59
   };
   /// Example #3: see IDateTime::year
   extern "C" ABSIMPLE_API void IDateTime_year_set(IDateTime* dateTime,int value);
   /// Example #3: see IDateTime::year
   extern "C" ABSIMPLE_API int  IDateTime_year_get(IDateTime* dateTime);
   /// Example #3: see IDateTime::month
   extern "C" ABSIMPLE_API void IDateTime_month_set(IDateTime* dateTime,int value);
   /// Example #3: see IDateTime::month
   extern "C" ABSIMPLE_API int  IDateTime_month_get(IDateTime* dateTime);
   /// Example #3: see IDateTime::day
   extern "C" ABSIMPLE_API void IDateTime_day_set(IDateTime* dateTime,int value);
   /// Example #3: see IDateTime::day
   extern "C" ABSIMPLE_API int  IDateTime_day_get(IDateTime* dateTime);
   /// Example #3: see IDateTime::hour
   extern "C" ABSIMPLE_API void IDateTime_hour_set(IDateTime* dateTime,int value);
   /// Example #3: see IDateTime::hour
   extern "C" ABSIMPLE_API int  IDateTime_hour_get(IDateTime* dateTime);
   /// Example #3: see IDateTime::minute
   extern "C" ABSIMPLE_API void IDateTime_minute_set(IDateTime* dateTime,int value);
   /// Example #3: see IDateTime::minute
   extern "C" ABSIMPLE_API int  IDateTime_minute_get(IDateTime* dateTime);
   /// Example #3: see IDateTime::second
   extern "C" ABSIMPLE_API void IDateTime_second_set(IDateTime* dateTime,int value);
   /// Example #3: see IDateTime::second
   extern "C" ABSIMPLE_API int  IDateTime_second_get(IDateTime* dateTime);
   // functions declaration for other langages than C++
   extern "C" ABSIMPLE_API ICalendar*  ICalendar_createInstance(ErrorCallbackType applicationCallback);
   extern "C" ABSIMPLE_API const char* ICalendar_convertIntToString(ICalendar* calendar, int year, int month, int day, int hour, int minute, int second);
 
   extern "C" ABSIMPLE_API IDateTime*  ICalendar_convertIntToStruct(ICalendar* calendar, int year, int month, int day, int hour, int minute, int second);
 
   extern "C" ABSIMPLE_API IDateTime*  ICalendar_convertStringToStruct(ICalendar* calendar, const char * charDate);